--- a/index.ipynb
+++ b/index.ipynb
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = list(filter(lambda budget: scaled_movies[2], scaled_movies))\n",
+    "x_values = list(filter(lambda budget: ['budget', scaled_movies))\n",
     "y_values = None"
    ]
   },
