Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,17 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = list(filter(lambda budget: ['budget', scaled_movies))\n",
+    "x_values = list(filter(lambda budget: ['budget'], scaled_movies))\n",
     "y_values = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "{'title': '21 &amp; Over', 'budget': 13.0, 'domgross': 26.0}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
