--- a/index.ipynb
+++ b/index.ipynb
@@ -159,11 +159,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = list(filter(lambda scaled_movies: scaled_movies['budget'], scaled_movies))\n",
+    "x_values = list(map(lambda scaled_movies: scaled_movies['budget'], scaled_movies))\n",
     "y_values = None"
    ]
   },
