Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,21 +164,21 @@
    "outputs": [],
    "source": [
     "x_values = list(map(lambda scaled_movies: scaled_movies['budget'], scaled_movies))\n",
-    "y_values = None"
+    "y_values = list(map(lambda scaled_movies: scaled_movies['budget'], scaled_movies))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'title': '21 &amp; Over', 'budget': 13.0, 'domgross': 26.0}"
+       "13.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
