--- a/index.ipynb
+++ b/index.ipynb
@@ -159,17 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_values = list(map(lambda scaled_movies: scaled_movies['budget'], scaled_movies))\n",
-    "y_values = list(map(lambda scaled_movies: scaled_movies['budget'], scaled_movies))"
+    "y_values = list(map(lambda scaled_movies: scaled_movies['domgross'], scaled_movies))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "13.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,9 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_values and y_values[0] # 26.0"
    ]
