--- a/index.ipynb
+++ b/index.ipynb
@@ -2456,7 +2456,8 @@
    "outputs": [],
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
-    "    predicted=regression_formula"
+    "    predicted=regression_formula(x)\n",
+    "    actual="
    ]
   },
   {
