--- a/index.ipynb
+++ b/index.ipynb
@@ -2457,7 +2457,7 @@
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
     "    predicted=regression_formula(x)\n",
-    "    actual="
+    "    actual=y_actual"
    ]
   },
   {
