--- a/index.ipynb
+++ b/index.ipynb
@@ -2457,7 +2457,8 @@
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
     "    predicted=regression_formula(x)\n",
-    "    actual=y_actual"
+    "    actual=y_actual(x, x_values, y_values)\n",
+    "    return "
    ]
   },
   {
