--- a/index.ipynb
+++ b/index.ipynb
@@ -2451,21 +2451,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
     "    predicted=regression_formula(x)\n",
     "    actual=y_actual(x, x_values, y_values)\n",
-    "    return "
+    "    return predicted-actual"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.099999999999994"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "error(x_values, y_values, 1.7, 10, 13) # -6.099999999999994"
    ]
