--- a/index.ipynb
+++ b/index.ipynb
@@ -2451,28 +2451,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
     "    predicted=regression_formula(x)\n",
     "    actual=y_actual(x, x_values, y_values)\n",
-    "    return predicted-actual"
+    "    return actual-predicted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.099999999999994"
+       "-6.099999999999994"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
