--- a/index.ipynb
+++ b/index.ipynb
@@ -2522,7 +2522,7 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    return {'marker':{'color:'red},'mode':'lines','name':'error at 120'}"
+    "    return {'marker':{'color:'red},'mode':'lines','name':'error at 120','x':x_val}"
    ]
   },
   {
