--- a/index.ipynb
+++ b/index.ipynb
@@ -2517,17 +2517,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    return {'marker':{'color':'red'},'mode':'lines','name':'error at 120','x':[x],'y':[regression_formula(x),}"
+    "    return {'marker':{'color':'red'},'mode':'lines','name':'error at 120','x':[x],'y':[regression_formula(x),y_actual(x, x_values, y_values)]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2537,39 +2537,10 @@
        " 'mode': 'lines',\n",
        " 'name': 'error at 120',\n",
        " 'x': [120],\n",
-       " 'y': [26.0,\n",
-       "  13.0,\n",
-       "  53.0,\n",
-       "  76.0,\n",
-       "  95.0,\n",
-       "  38.0,\n",
-       "  67.0,\n",
-       "  15.0,\n",
-       "  61.0,\n",
-       "  37.0,\n",
-       "  19.0,\n",
-       "  33.0,\n",
-       "  107.0,\n",
-       "  35.0,\n",
-       "  120.0,\n",
-       "  368.0,\n",
-       "  24.0,\n",
-       "  93.0,\n",
-       "  62.0,\n",
-       "  108.0,\n",
-       "  25.0,\n",
-       "  54.0,\n",
-       "  239.0,\n",
-       "  393.0,\n",
-       "  123.0,\n",
-       "  46.0,\n",
-       "  134.0,\n",
-       "  25.0,\n",
-       "  135.0,\n",
-       "  409.0]}"
+       " 'y': [214.0, 93.0]}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
