--- a/index.ipynb
+++ b/index.ipynb
@@ -2517,17 +2517,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-39-482d0b2dd644>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-482d0b2dd644>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {'marker':{'color':'red'},'mode':'lines','name':'error at 120','x':[x],'y':[y_actual(x, x_values, y_values)],regression_formula(x)}\u001b[0m\n\u001b[0m                                                                                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    return {'marker':{'color':'red'},'mode':'lines','name':'error at 120','x':[x],'y':[y_actual(x, x_values, y_values)]}"
+    "    return {'marker':{'color':'red'},'mode':'lines','name':'error at 120','x':[x],'y':[y_actual(x, x_values, y_values)],regression_formula(x)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2540,7 +2549,7 @@
        " 'y': [214.0, 93.0]}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
