Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2517,26 +2517,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-39-482d0b2dd644>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-482d0b2dd644>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {'marker':{'color':'red'},'mode':'lines','name':'error at 120','x':[x],'y':[y_actual(x, x_values, y_values)],regression_formula(x)}\u001b[0m\n\u001b[0m                                                                                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    return {'marker':{'color':'red'},'mode':'lines','name':'error at 120','x':[x],'y':[y_actual(x, x_values, y_values)],regression_formula(x)}"
+    "    return {'marker':{'color':'red'},'mode':'lines','name':'error at 120','x':[x],'y':[y_actual(x, x_values, y_values),regression_formula(x)]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2546,10 +2537,10 @@
        " 'mode': 'lines',\n",
        " 'name': 'error at 120',\n",
        " 'x': [120],\n",
-       " 'y': [214.0, 93.0]}"
+       " 'y': [93.0, 214.0]}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
