--- a/index.ipynb
+++ b/index.ipynb
@@ -2517,17 +2517,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    return {'marker':{'color':'red'},'mode':'lines','name':'error at 120','x':[x],'y':[y_actual(x, x_values, y_values),regression_formula(x)]}"
+    "    return {'marker':{'color':'red'},'mode':'lines','name':'error at 120','x':[x,x],'y':[y_actual(x, x_values, y_values),regression_formula(x)]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2536,11 +2536,11 @@
        "{'marker': {'color': 'red'},\n",
        " 'mode': 'lines',\n",
        " 'name': 'error at 120',\n",
-       " 'x': [120],\n",
+       " 'x': [120, 120],\n",
        " 'y': [93.0, 214.0]}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
