--- a/index.ipynb
+++ b/index.ipynb
@@ -3672,7 +3672,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    pass"
+    "    list(map(lambda))"
    ]
   },
   {
