--- a/index.ipynb
+++ b/index.ipynb
@@ -3672,7 +3672,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    list(map(lambda x_value: error_line_trace(x_values, y_values, m, b, x_value), x_values))"
+    "    returnlist(map(lambda x_value: error_line_trace(x_values, y_values, m, b, x_value), x_values))"
    ]
   },
   {
