--- a/index.ipynb
+++ b/index.ipynb
@@ -3667,17 +3667,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    returnlist(map(lambda x_value: error_line_trace(x_values, y_values, m, b, x_value), x_values))"
+    "    return list(map(lambda x_value: error_line_trace(x_values, y_values, m, b, x_value), x_values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3686,18 +3686,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "errors_for_regression and len(errors_for_regression) # 30"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'marker': {'color': 'red'},\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'error at 120',\n",
+       " 'x': [200.0, 200.0],\n",
+       " 'y': [409.0, 350.0]}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "errors_for_regression and errors_for_regression[-1]\n",
     "\n",
