--- a/index.ipynb
+++ b/index.ipynb
@@ -5305,7 +5305,7 @@
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "    return error**2"
+    "    return error(x_values, y_values, m, b, x)**2"
    ]
   },
   {
