--- a/index.ipynb
+++ b/index.ipynb
@@ -5342,7 +5342,7 @@
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    list map"
+    "    return list(map(lambda x))"
    ]
   },
   {
