--- a/index.ipynb
+++ b/index.ipynb
@@ -5337,17 +5337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    return list(map(lambda x: squared_error(x_values, y_values, m, b, x), x_values)"
+    "    return list(map(lambda x: squared_error(x_values, y_values, m, b, x), x_values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {
     "scrolled": true
    },
@@ -5387,7 +5387,7 @@
        " 3481.0]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
